# ASC-ODE-team09

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  Report2.html  ex17.2.2.html  ex17.4.1.html  ex17.4.1_q4.html  ex18.4.html  ex18.5.html  ex19.4.html  ex1_title.html  ex20.3.html  ex20.html  ex20_q4.html  ex2_title.html  ex3_title.html  genindex.html  intro.html  legendre_data.txt  myst.yml  objects.inv  output_test_ode.txt  results_legendre  run_legendre  run_original  search.html  searchindex.js  test  test_new
.github/workflows/: deploy.yml  sync-branches.yml
Exercise1/: Report1.md
Exercise1/ex17.2.2/: Explicit_Euler.cpp  Improved_Euler.cpp  explicit_euler.csv  improved_euler.csv  plotq1.py  plotq2.py
Exercise1/ex17.4.1/: Crank_Nicolson.cpp  Implicit_Euler.cpp  plot2.1.py  (+3 more)
Exercise2/: Report2.md  Report_184.md  ex18_5.cpp  plot_phase_ex18_5.py
Exercise3/: bind_mass_spring.cpp  crane.md  ex20.4.md  mass_spring.hpp  sucio.md
_sources/: ex17.2.2.md  ex17.4.1_q4.md  ex18.5.md  ex19.4.md  ex20.3.md  ex20.md  ex20_q4.md  intro.md
compare_results/: explicit_100.txt  explicit_20.txt  explicit_200.txt  explicit_50.txt  implicit_100.txt  implicit_20.txt  implicit_200.txt  implicit_50.txt  improved_100.txt  improved_20.txt  improved_200.txt  improved_50.txt
demos/: legendre184.cpp  plot_legendre.py  plotmassspring.py  prueba.py  test_ode.cpp  testmalo.cpp
docs/: Report2.md  _config.yml  _config.yml.bak  _toc.yml  ex17-2-2.json  ex17-4-1.json  ex17.2.2.md  ex18.4.md  ex18.5.md  ex19.4.md  ex1_title.md  ex20.md  ex20_q4.md  ex2_title.md  ex3_title.md  index.html  intro.md  myst.yml  objects.inv  report.html
mechsystem/: CMakeLists.txt  Newmark.hpp  bind_mass_spring.cpp  chain.ipynb  chain_spring.ipynb  chian_constraint.ipynb  crane.ipynb  crane.py  creane_malo.py  dist_constraints.ipynb  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  mass_spring.py  spinning.ipynb  test_mass_spring.py
src/: Newton.hpp  RCCircuit.hpp  RCRHS.hpp  RHS.hpp  timestepper.hpp
(+49 files in other folders)
